// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must wrap in an item with custom tag and transfer of props 1`] = `
<div
  className="one"
  tagName="header"
>
  <div>
    Hello
  </div>
</div>
`;

exports[`must wrap in an item with default tag 1`] = `
<div>
  <div>
    Hello
  </div>
</div>
`;
